<resources>
    <string name="app_name" translatable="false">NewsApp</string>
    <string name="news_app" translatable="false">News App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="error" translatable="false">Something Went Wrong!\n Try Reloading The Page</string>
    <string name="reload" translatable="false">Reload</string>
    <string name="news_title_placeholder" translatable="false">Why are football\'s biggest clubs starting a new tournament?</string>
    <string name="news_source_placeholder" translatable="false">BBC News</string>
    <string name="news_time_placeholder" translatable="false">3 hours ago</string>
    <string name="view_article" translatable="false">View Full Article</string>
    <string name="sports">Sports</string>
    <string name="pick_your_category_of_interest">Pick your category\nof interest</string>
    <string name="header_news_app" translatable="false">News App!</string>
    <string name="settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="drawer_open" translatable="false">open</string>
    <string name="drawer_close" translatable="false">close</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
</resources>