<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="25dp"
    android:paddingVertical="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/newsImv"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:scaleType="fitXY"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/newsSourceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/grey"
        tools:text="@string/news_source_placeholder" />

    <TextView
        android:id="@+id/newsTitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="@string/news_title_placeholder" />

    <TextView
        android:id="@+id/newsTimeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:textColor="@color/grey"
        tools:text="@string/news_time_placeholder" />
</LinearLayout>